# patchbay

./: .gitignore  ABOUT.txt  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  _build.ps1  _test.ps1
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  security.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  approval.rs  main.rs  tray.rs
src-tauri/src/config/: mod.rs  patchbay.example.jsonc  schema.rs  secrets.rs
src-tauri/src/gateway/: handlers.rs  http.rs  jsonrpc.rs  mod.rs  session.rs  sse.rs  tools.rs
src-tauri/src/upstream/: client.rs  http.rs  mod.rs  process.rs  stdio.rs
src-tauri/src/utils/: autorun.rs  dpapi.rs  log.rs  mod.rs  request_log.rs
